# dunebuggy

./: .gitignore  LICENSE  README.md  pyproject.toml  sanndsnake_test.ipynb  test.csv
core/: dune.py  dunequery.py
dunebuggy/core/: dune.py  dunequery.py  exceptions.py  gqlquerier.py
dunebuggy/examples/: basic_example.ipynb  my_test_data.csv
dunebuggy/models/: constants.py  gqlqueries.py  query.py
examples/: sanndsnake_test.ipynb
notebooks/: basic_example.ipynb  test_requests.ipynb
sandsnake/: __init__.py
sandsnake/core/: __init__.py  dune.py  dunequery.py
sandsnake/examples/: Untitled.ipynb  basic_example.ipynb  sanndsnake_test.ipynb
sandsnake/models/: constants.py  gqlqueries.py  query.py
