[tool.poetry]
name = "sandsnake"
version = "0.1.0"
description = "A lightweight (unofficial) Python SDK for Dune.xyz"
authors = ["rysuds <ryan.sudhakaran@gmail.com>"]
license = "MIT"
homepage = "https://github.com/rysuds/sandsnake"
repository = "https://github.com/rysuds/sandsnake"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.9"
httpx = ">=0.18.2"
sqlparse = "^0.4.2"
pandas = ">=1.2.4"
pydantic = ">=1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
