[tool.poetry]
name = "dunebuggy"
version = "1.0.4"
description = "A lightweight (unofficial) Python SDK for Dune.xyz"
authors = ["rysuds <ryan.sudhakaran@gmail.com>"]
license = "MIT"
homepage = "https://github.com/rysuds/dunebuggy"
repository = "https://github.com/rysuds/dunebuggy"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "1.21.*"
httpx = ">=0.18.2"
sqlparse = ">=0.4.2"
pandas = ">=1.2.4"
pydantic = ">=1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "dunebuggy" }
]